--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/sign_out" />
+
+        <Button
+            android:id="@+id/button_to_view_stream"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/view_stream"
+        />
         <!--<TextView-->
             <!--android:id="@+id/status"-->
             <!--android:layout_width="wrap_content"-->
