added menu, added click to gridview currently pointint to all_stream, added search page, mostly functional.

--- a/app/src/main/res/menu/menu_all_stream.xml
+++ b/app/src/main/res/menu/menu_all_stream.xml
@@ -13,4 +13,7 @@
     <item
         android:id="@+id/AllStream"
         android:title="AllStream"/>
+    <item
+        android:id="@+id/SearchStream"
+        android:title="SearchStream"/>
 </menu>
