added nearby pictures stuff

--- a/app/src/main/res/menu/menu_all_stream.xml
+++ b/app/src/main/res/menu/menu_all_stream.xml
@@ -16,4 +16,8 @@
     <item
         android:id="@+id/SearchStream"
         android:title="SearchStream"/>
+
+    <item
+        android:id="@+id/NearbyPictures"
+        android:title="NearbyPictures"/>
 </menu>
