fixed search image offset issue Merge branch 'master' of https://github.com/williamzhongshi/mini_project_android
# Conflicts:
#	app/src/main/AndroidManifest.xml

--- a/app/src/main/res/layout/activity_nearby_pictures.xml
+++ b/app/src/main/res/layout/activity_nearby_pictures.xml
@@ -44,11 +44,11 @@
     </GridView>
 
     <Button
-        android:id="@+id/more__result"
+        android:id="@+id/more_result"
         android:layout_width="214dp"
         android:layout_height="wrap_content"
         android:layout_gravity="top|right"
-        android:text="More Search Result"
+        android:text="More Result"
         app:layout_anchor="@+id/include"
         app:layout_anchorGravity="bottom|left" />
 
