Add camera first version.

--- a/app/src/main/res/menu/menu_all_stream.xml
+++ b/app/src/main/res/menu/menu_all_stream.xml
@@ -20,4 +20,7 @@
     <item
         android:id="@+id/NearbyPictures"
         android:title="NearbyPictures"/>
+    <item
+        android:id="@+id/Camera"
+        android:title="Camera"/>
 </menu>
