integrated to single strema view, though no pictures were shown, added link to nearby_stream

--- a/app/src/main/res/layout/activity_all_stream.xml
+++ b/app/src/main/res/layout/activity_all_stream.xml
@@ -63,12 +63,21 @@
                 android:layout_height="0dp"
                 android:layout_weight="50"
                 android:text="Search"/>
-        </android.support.v7.widget.LinearLayoutCompat>
 
-        <android.support.v7.widget.AppCompatImageView
+        </android.support.v7.widget.LinearLayoutCompat>
+        <android.support.v7.widget.LinearLayoutCompat
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="20"/>
+            android:layout_weight="20"
+            android:orientation="vertical">
+
+        <Button
+            android:id="@+id/to_nearby_pictures"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="50"
+            android:text="Nearby"/>
+        </android.support.v7.widget.LinearLayoutCompat>
 
     </android.support.v7.widget.LinearLayoutCompat>
     <Button
